Out of Tree Build Dir

--- a/ozwbase-qt/Dockerfile
+++ b/ozwbase-qt/Dockerfile
@@ -32,6 +32,6 @@ RUN cd /opt/source/qt-everywhere-src-5.12.9 \
 	-nomake tests 
 ARG distcchosts=''
 ENV DISTCC_HOSTS=$distcchosts
-RUN cd /opt/source/qt-everywhere-src-5.12.9 \
+RUN cd /opt/source/qt-everywhere-src-5.12.9/build \
 	&& make clean \
 	&& make CC=distcc CXX=distcc -j 6
